--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker image
-        run: docker-compose build fontend
+        run: docker-compose build frontend
 
       - name: Tag Docker image
         run: docker tag ezekielkaeyros/vmdo_vmdo-frontend
