--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ on:
 env:
   IMAGE_NAME: vmdo_frontend
   AWS_REGION: eu-central-1                         
-  ECS_SERVICE: vmdo-service2            
+  ECS_SERVICE: vmdo-service            
   ECS_CLUSTER: test-cluster-vmdo             
   ECS_TASK_DEFINITION: aws/td.json 
   CONTAINER_IMAGE: ezekielkaeyros/vmdo_vmdo-frontend
@@ -28,7 +28,6 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
     steps:
         - name: Checkout
@@ -43,13 +42,14 @@ jobs:
           id: task-def
           uses: aws-actions/amazon-ecs-render-task-definition@v1
           with:
-              task-definition: ${{ env.ECS_TASK_DEFINITION }}
-              container-name: ${{ env.CONTAINER_NAME }}
-              image: ${{ env.CONTAINER_IMAGE }}
+            task-definition: ${{ env.ECS_TASK_DEFINITION }}
+            container-name: ${{ env.CONTAINER_NAME }}
+            image: ${{ steps.build-image.outputs.image }}
+
         - name: Deploy Amazon ECS task definition
           uses: aws-actions/amazon-ecs-deploy-task-definition@v1
           with:
-              task-definition: ${{ steps.task-def.outputs.task-definition }}
-              service: ${{ env.ECS_SERVICE }}
-              cluster: ${{ env.ECS_CLUSTER }}
-              wait-for-service-stability: true
+            task-definition: ${{ steps.task-def.outputs.task-definition }}
+            service: ${{ env.ECS_SERVICE }}
+            cluster: ${{ env.ECS_CLUSTER }}
+            wait-for-service-stability: true
