--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 env:
   IMAGE_NAME: vmdo_frontend
   AWS_REGION: eu-central-1
-  ECS_SERVICE: vmdo-service
+  ECS_SERVICE: vmdo-service2
   ECS_CLUSTER: test-cluster-vmdo
   ECS_TASK_DEFINITION: aws/td.json
   CONTAINER_IMAGE: ezekielkaeyros/vmdo_vmdo-frontend
